# FFmpegDemo

./: .gitignore  .gitmodules  .qmake.conf  CMakeLists.txt  CMakeSettings.json  FFmpegDemo.pro  FFmpegDemoConfig.pri  Readme.md
Capture/: Capture.pro  mainwindow.cpp  mainwindow.h  videodec.cpp
Convert/: convert.h
Muxing/: common.h  ffmpeg_muxer.h  fileio.cpp  fileio.h  main.cpp  stream.cpp  stream.h  video.cpp
Player/: Player.pro  decodertmp.cpp  decodertmp.h  main.cpp  openglwindow.cpp  openglwindow.h  widget.cpp  widget.h
RGBToH264/: RGBToH264.pro  convert.cpp  convert.h  main.cpp
Remuxing/: Remuxing.pro
Remuxing/src/: args.cpp  args.h  ffmpegHeader.cpp  ffmpegHeader.h  main.cpp
YUV/: YUV.pro  errcode.h  main.cpp
YUVDecoding/: YUVDecoding.pro  main.cpp
demos/Capture/: videodec.h
demos/Convert/: Convert.pro  widget.cpp  widget.h
demos/Muxing/: Muxing.pro  common.h  ffmpeg_muxer.h  fileio.cpp  fileio.h
demos/Player/: Player.pro  decodertmp.cpp  widget.cpp
demos/RGBToH264/: main.cpp
demos/Remuxing/src/: ffmpegHeader.h
demos/YUVFromH264/: YUVFromH264.pro
demos/YUVToH264/: YUVToH264.pro  errcode.h  main.cpp
doc/: yuv.md
mkspecs/features/: vcpkg.prf
res/: cif-size.txt  ffmpeg-flower.bat  ffplay-flower-i420.bat  ffplay-flower-i422.bat  ffplay-flower-i444.bat  ffplay-flower-nv12.bat  ffplay-flower-nv21.bat  ffplay-flower-uyvy.bat  ffplay-flower-yuy2.bat  ffplay-flower.bat  ffplay-flower_fromh264.bat  ffplay-flower_h264.bat
src/: CMakeLists.txt
src/YUVFromH264/: Convert.cpp  main.cpp
src/YUVGenerater/: CMakeLists.txt  main.cpp
src/YUVToH264/: CMakeLists.txt  Convert.cpp  Convert.h  main.cpp
src/YUVToH264-Libx264/: CMakeLists.txt  Convert.cpp  Convert.h  main.cpp
src/demos/Convert/: convert.cpp
src/demos/Muxing/: audio.cpp  main.cpp  stream.cpp  stream.h
src/demos/Player/: fragment.fsh  main.cpp  openglwindow.cpp
src/demos/RGBToH264/: RGBToH264.pro
src/demos/Remuxing/src/: args.cpp
src/shared/: Args.hpp  BMP.h  Buffer.h  Buffer.hpp  CMakeLists.txt  FileIO.h  FileIO.hpp  Math.hpp
tools/: tools.pro
tools/YUVGenerater/: BMP.h  Buffer.h  YUVGenerater.pro  main.cpp
