aux_source_directory(. allSrc)
get_filename_component(baseName ${CMAKE_CURRENT_SOURCE_DIR} NAME)
file(GLOB_RECURSE allHeaders  *.h *.hpp)

add_executable(${baseName} ${allSrc} ${allHeaders})
if (CMAKE_BUILD_TYPE MATCHES "Release")
    target_link_libraries(${baseName} PRIVATE yuv)
else()
    target_link_libraries(${baseName} PRIVATE yuvd)
endif()
add_test(NAME ${baseName} COMMAND ${baseName})
